all formatted except for title page

--- a/4.mss/main.tex
+++ b/4.mss/main.tex
@@ -197,7 +197,9 @@
         \label{fig:adist}
     \end{figure}
 
-        \begin{figure}[!h]
+    \newpage
+
+        \begin{figure}[H]
         \begin{centering}
         \includegraphics[width=0.7\textwidth]{../2.analyses/figures/all_vs_rem.png}
         \caption{Mean per-capita interaction strengths between 22 focal species of wildflowers. (A) shows all observed and unobserved interactions whereas (B) shows those interactions estimated by the REM only. Competitive interactions are shown in yellow and facilitative in blue, line thickness denotes interaction strength. Arrows point to species $i$.}
