changing \textcite to cite

--- a/4.mss/main.tex
+++ b/4.mss/main.tex
@@ -79,7 +79,7 @@
     Measuring non-trophic relationships in plant communities is difficult, in part because they cannot be directly observed as in food webs or other interaction networks, and must instead be inferred by other means. Arguably the most common approach to empirically quantifying interactions between a focal species and others involves measuring the effects of neighbours on a proxy for lifetime reproductive success (e.g. fecundity, growth rate) \parencite{Connell1961, Grace1990}. This can be done for example by growing focal species with neighbours of different identities and at varying densities, in the field or laboratory. The resulting phenomenological interaction strengths are not dependant on any specific mechanism and can be directly linked to changes in species abundances through the use of population dynamic models, for example with the Beverton-Holt model \parencite{Beverton1957, Levine2009}). This approach has been widely applied and has greatly improved our understanding of competition and its effects on biodiversity \parencite{Tilman1982, Chesson2000b, Levine2008, Adler2010, Mayfield2010a, Kraft2015} but remains limited to investigating interactions between few species, rather than a diverse community. The reason is two-fold: applying this method to a large number of species requires both large amounts of data and replication, as well as complex models which can be difficult to implement and run the danger of over-parameterisation. 
 
     \paragraph{} 
-    A common alternative which is less demanding, and scalable to high-diversity systems is the use of association, or co-occurrence networks. Plant 'interactions' are inferred by measuring positive and negative spatial associations between species (e.g. \textcite{Saiz2011}), resulting in networks which capture a variety of factors including biotic interactions \parencite{Losapio2019}. This approach requires data which is much more easily obtainable and can naturally handle a large number of species. A wide range of packages are available in R to deduce association networks, alongside further tools and methods to better infer plant interactions from spatial distribution patterns \parencite{Keil2019}, for example by including environmental covariates. Spatial association networks however, have been found to remain poor predictors of species interactions and rarely match empirical estimates \parencite{Sander2017,Barner2018, Thurman2019, Blanchet2020}.
+    A common alternative which is less demanding, and scalable to high-diversity systems is the use of association, or co-occurrence networks. Plant 'interactions' are inferred by measuring positive and negative spatial associations between species (e.g. \cite{Saiz2011}), resulting in networks which capture a variety of factors including biotic interactions \parencite{Losapio2019}. This approach requires data which is much more easily obtainable and can naturally handle a large number of species. A wide range of packages are available in R to deduce association networks, alongside further tools and methods to better infer plant interactions from spatial distribution patterns \parencite{Keil2019}, for example by including environmental covariates. Spatial association networks however, have been found to remain poor predictors of species interactions and rarely match empirical estimates \parencite{Sander2017,Barner2018, Thurman2019, Blanchet2020}.
 
 
     \paragraph{}
@@ -289,13 +289,13 @@
     \subsection{Understanding community diversity and stability}
 
         \paragraph{}
-        Quantifying the matrix of per-capita interaction strengths between species in horizontal communities allows us to explore how the mechanisms maintaining diversity and stability operate in these systems and across a broad number of species. Self-regulation, for example, is an extremely important driver of community stability \parencite{Barabas2017} and arises from how individuals of the same species interact with one another. Whereas same-species effects cannot be estimated by association networks, our framework quantifies intraspecific interactions and allows us to measure the strength and prevalence of competitive and facilitative density-dependence. Measures of intra and interspecific interactions can also allow us to estimate niche overlap between species (for an example, see \textcite{Chu2015a}): weak interactions between species suggests they are not sharing or competing for many resources, and occupy different niche spaces in the community. Strong competitive self-regulation, and weak interactions between two species, are two of many mechanisms leading to stability and diversity in plant communities.
+        Quantifying the matrix of per-capita interaction strengths between species in horizontal communities allows us to explore how the mechanisms maintaining diversity and stability operate in these systems and across a broad number of species. Self-regulation, for example, is an extremely important driver of community stability \parencite{Barabas2017} and arises from how individuals of the same species interact with one another. Whereas same-species effects cannot be estimated by association networks, our framework quantifies intraspecific interactions and allows us to measure the strength and prevalence of competitive and facilitative density-dependence. Measures of intra and interspecific interactions can also allow us to estimate niche overlap between species (for an example, see \cite{Chu2015a}): weak interactions between species suggests they are not sharing or competing for many resources, and occupy different niche spaces in the community. Strong competitive self-regulation, and weak interactions between two species, are two of many mechanisms leading to stability and diversity in plant communities.
 
         \paragraph{}
         A key feature of our model framework is the inclusion of facilitative interactions, which have long been disregarded in plant population models and theoretical frameworks of plant diversity-maintenance. The importance of facilitative interactions to community structure and patterns of abundance has long been recognised \parencite{Callaway1997a} but there is still little consensus on how they may affect biodiversity \parencite{Bruno2003}. Recent work suggests facilitation may be more widespread than expected \parencite{Gross2015, Picoche2020} and can  benefit species diversity and stability depending on the circumstances \parencite{Coyte2015, Brooker2008}. Our framework provides a means to investigate the prevalence and strength of facilitation across multiple species, and how it may act in relation to competition and species diversity.  
         
         \paragraph{}
-        Ultimately, quantifying plant interaction networks allows us to apply tools from network theory which will help us understand not only how plants interact, but also how these interactions drive community-level patterns of abundance and diversity. Several metrics already exist for describing network structure such as weighted connectance \parencite{Ulanowicz1991} or relative intransitivity \parencite{Laird2006a}, though these are fewer than for trophic or unweighted networks networks (e.g. \textcite{Bersier2002, Delmas2019}. Adapting measures of nestedness or modularity for example to non-sparse networks (as plant communities typically are) would allow us to further characterise how interactions and species are organised. These metrics relate to various aspects of stability and could greatly inform us on how diversity is maintained between plants. 
+        Ultimately, quantifying plant interaction networks allows us to apply tools from network theory which will help us understand not only how plants interact, but also how these interactions drive community-level patterns of abundance and diversity. Several metrics already exist for describing network structure such as weighted connectance \parencite{Ulanowicz1991} or relative intransitivity \parencite{Laird2006a}, though these are fewer than for trophic or unweighted networks networks (e.g. \cite{Bersier2002, Delmas2019}). Adapting measures of nestedness or modularity for example to non-sparse networks (as plant communities typically are) would allow us to further characterise how interactions and species are organised. These metrics relate to various aspects of stability and could greatly inform us on how diversity is maintained between plants. 
 
         %Likewise, networks also provide several ways of measuring and describing species roles in their respective communities \parencite{Cirtwill2018a} for example through the use of structural motifs, unique patterns of interacting species which together make up the whole network. Motifs have been found to have important biological meaning in food webs \parencite{Bascompte2005a} but remain to be identified for single-trophic and bipartite networks. 
 
