adding page counter, last run before thesis?

--- a/4.mss/main.tex
+++ b/4.mss/main.tex
@@ -48,13 +48,13 @@
 
 \date{} % supresses date
 
-%\setcounter{page}{54}
+\setcounter{page}{70}
 
 \setlength{\intextsep}{10ex}
 
 \begin{document}
-\maketitle  
-\newpage
+% \maketitle  
+% \newpage
 \setcounter{secnumdepth}{3} % sections are level 1
 
 % \linenumbers
