--- a/4.mss/main.tex
+++ b/4.mss/main.tex
@@ -63,12 +63,18 @@
 \section*{Abstract}
     
     \begin{enumerate}
-    \item Understanding ecological communities requires an understanding of how the different species within it relate to one another. Those relationships are difficult to quantify in single trophic systems such as plant communities because they cannot be directly observed as in food webs or other species interaction networks, and must instead be inferred by other means. Current methods are inadequate for natural complex communities because they tend to rely on co-occurrence patterns (inaccurate) or intensive experimental designs (time-consuming, especially for many species). 
+    \item Understanding ecological communities requires an understanding of how the different species within it relate to one another. Those relationships are difficult to quantify in single trophic systems such as plant communities because they cannot be directly observed as in food webs or other species interaction networks, and must instead be inferred by other means. Current methods are inadequate for natural complex communities because they tend to rely on co-occurrence patterns (inaccurate) or intensive experimental designs (time-consuming, especially for many species).
+
     \item We describe a general framework which allows us to estimate competitive and facilitative pair-wise interactions in diverse plant communities from empirical observations of performance (e.g. fecundity) and varying neighbour identities. This framework requires a multi-tiered approach to resolve all interactions. We first apply neighbour density-dependent performance models to each focal species in order to estimate interactions between species commonly observed to co-occur. We then use the resulting 'observed' interactions to approximate interactions which were not observed using a different set of assumptions. This approach is designed to be implemented with Bayesian statistical methods which allow us to estimate interactions coefficients despite high model complexity, as well as quantify the uncertainty around the resulting community matrix.
-    \item We provide the model code in the STAN programming language and apply it to data from an annual wildflower survey.  
+
+    \item We provide the model code in the STAN programming language and apply it to seed production data from an annual wildflower survey. We illustrate how the resulting interaction strengths can be included into system-specific population dynamic models 
+
+    system-specific demographic parameters can be included in
+
+    the resulting interactions strengths can 
 
 
-    \item This approach is modelled using a Bayesian statistical framework which allows us to estimate interactions coefficients despite high model complexity, as well as quantify the uncertainty around the resulting community matrix. We provide the model code in the STAN programming language. We illustrate the potential uses of this method by applying it to a case study on australian wildflowers. We show how to scale the resulting interaction matrix into per-capita effects by integrating the above model framework into an annual plant population dynamic model. This particular application can be of wide use to both ecosystem management and towards improving our understanding of community diversity and stability.
+    We illustrate the potential uses of this method by applying it to a case study on australian wildflowers. We show how to scale the resulting interaction matrix into per-capita effects by integrating the above model framework into an annual plant population dynamic model. This particular application can be of wide use to both ecosystem management and towards improving our understanding of community diversity and stability.
     \end{enumerate}
 
 % neighbour density-dependent performance models
@@ -118,8 +124,7 @@
     \subsection{Unrealised links}
     
         \paragraph{}
-        In any given site or year, a focal species may only be observed to interact with a subset of potential interaction partners, which means the NDD model above will not be able to estimate all potential interactions ($\beta_{ij}$) between species. This is especially true for rare species. 
-        These \textit{unrealised} interactions can be estimated by using an alternative model with a different set of assumptions to the NDDs. This model is described as the response-effect model (REM) by Godoy, Kraft and Levine (2014) and assumes that each species has the same effect on all neighbours regardless of their identity, as well as the same response to competition regardless of competitor identity. 
+        In any given site or year, a focal species may only be observed to interact with a subset of potential interaction partners, which means the NDD model above will not be able to estimate all potential interactions ($\beta_{ij}$) between species. This is especially true for rare species. These \textit{unrealised} interactions can be estimated by using an alternative model with a different set of assumptions to the NDDs. This model is described as the response-effect model (REM) by Godoy, Kraft and Levine (2014) and assumes that each species has the same effect on all neighbours regardless of their identity, as well as the same response to competition regardless of competitor identity. 
         
         \begin{equation}
         F_{i} = \beta_{i0} - r_{i} \sum_{i}^{j} e_{j} N_{j}
@@ -135,9 +140,47 @@
     
         where $\sigma$ is a community-level scale parameter for the logistic distribution. We use a logistic distribution here because the heavier tails make it a slightly weaker informative prior than a normal distribution. $\sigma$ defines how widely the tails extend and can be expressed in terms of the standard deviation. 
 
-    \subsection{Scaling the interactions}
+    \subsection{Returning per-capita interactions}
 
-    	The $\beta_{ij}$ and $r_i e_j$ estimates returned by the framework describe the effect of species $j$ on the fitness of species $i$. The magnitude of these interaction terms thus depends on the species-specific value of intrinsic fitness. Empirical data may however reflect - THe proxies for lifetime reproductive success collected empirically may not however reflect true differences in the reproductive success of different species, but may be .. by different reproductive strategies  
+    	The $\beta_{ij}$ and $r_i e_j$ estimates returned by the framework describe the effect of species $j$ on the proxy for lifetime reproductive fitness of species $i$. Differences in the magnitude of these interaction terms may thus reflect differences in reproductive fitness, which can vary widely between species. In order to make the effects of interactions comparable between species, the interaction terms returned by both models above can be transformed into \textit{per-capita} interaction strengths \parencite{Godoy2014, Bimler2018}. The appropriate scaling is determined by writing the neighbour density-dependant model (Eq. \ref{ifm}) into a form equivalent to a Lotka-Volterra competition model: 
+
+        \begin{equation}
+        F_{i} = \beta_{i0} \left ( 1 - \sum_{i}^{j} {\beta_{ij}}'' N_{j} \right )
+        \label{LVform}
+        \end{equation}
+
+        This reveals that our interaction terms can be rescaled into per-capita interaction strengths by dividing them with the recipient species' intrinsic fitness:  
+
+    	\begin{equation}
+        {\beta_{ij}}'' = \frac{\beta_{ij}}{\beta_{i0}}
+        \label{scaling}
+        \end{equation}
+
+        where $\beta_{ij}$ can be replaced with $r_i e_j$ when appropriate. Though this scaling step is not strictly necessary, per capita interaction strengths have the benefit of being directly comparable both across species and across environmental contexts where reproductive fitness may vary \parencite{Wootton2005}, leading to a wider range of potential applications.
+
+    \subsection{Integrating interaction strengths into models of population dynamics}
+
+    	As a further step,
+
+        Per capita interaction strength estimates thereby scale out differences in species’ population size. This makes estimates immediately comparable across species and environmental contexts when population abundances vary. Indeed, per capita interaction strengths underlie all other measures of interaction strength, including the species-level effect rates that empirical ecologists typically intend to com- pare (Wootton 1997, Laska and Wootton 1998).
+
+        \paragraph{}
+        Though this rescaling is not necessary when interactions are quantified as effects on rates such as growth or biomass accumulation, it is particularly useful in cases where $F_i$ is captured by variables which are affected by r/K reproductive strategies, such as seed or fruit production. Species $i$ for example may produce a high number of seeds of which few are viable, whereas species $j$ produces very few seeds though these are much more likely to mature into reproductive adults. Scaling the interaction terms returned by the models allows us to compare how species $i$ and $j$ both respond to interactions, relative to 
+
+Depending on the nature of the proxy chosen, this between-species variation in $F_i$ may not capture true differences in the fitness of each species, but rather differences in reproductive strategies for example due to r/K tradeoffs. 
+
+        Species $i$ and $j$ may have equal effects on each other's lifetime reproductive success, but this will not be captured 
+
+
+        In these cases, differences in $F_i$ between species (and thus in the magnitude of the interaction terms) may be driven by differences in the amount of fruit or seed produced which do not account for 
+
+        \paragraph{} 
+        In certain cases, species differences in the proxy $F$ may only be translated into true fitness differences with the inclusion of species-specific demographic rates, such as seed survival or germination rate. In these cases, 
+
+
+        This step is not strictly necessary, but allows us to compare the ...
+
+
 
 	\subsection{Model fitting}
 
